# pydantic_ai_helper

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: multi_provider.py  ollama_local.py  structured_output.py  tool_calling.py
pydantic_ai_helper/: __init__.py  agent.py  providers.py  structured.py  tools.py
pydantic_ai_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: build_harmonize_notebook.py  build_notebook.py  test_harmonize_usecases.ipynb  test_helpers.ipynb
