[project]
name = "pydantic-ai-helper"
version = "0.1.0"
description = "Helper utilities for pydantic_ai: unified provider factory, structured output, and tool-calling across OpenAI, Anthropic, Gemini, Ollama."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai-slim[openai,anthropic,google,vertexai]>=0.0.36",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
notebook = ["jupyter>=1", "ipykernel>=6", "nest_asyncio>=1.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pydantic_ai_helper*"]
